--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       animation: fadeOut 3s forwards 4s;
     }
     .overlay img {
-      width: 0;
-      height: auto;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
       animation: expandImage 3s forwards;
     }
     .start-button {
