--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
       animation: fadeOut 3s forwards 4s;
     }
     .overlay img {
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
+      width: 100%;
+      height: 100%;
       animation: expandImage 3s forwards;
     }
     .start-button {
