--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       animation: fadeIn 1.5s forwards 3s;
     }
     @keyframes expandImage {
-      from { width: 0; opacity: 0; }
-      to { width: 100%; opacity: 1; }
+      from { width: 0; opacity: 0; height: 0%; }
+      to { width: 100%; opacity: 1; height: 100%; }
     }
     @keyframes fadeIn {
       from { opacity: 0; }
